# userverse-python-client

./: .coverage  README.md  decode_json.py  pyproject.toml
.github/workflows/: build-and-test.yml  release.yml
examples/: company_demo.py  company_user_management_demo.py  company_user_management_demo_README.md  company_user_roles_demo.py  demo.py  user_demo.py  user_demo_README.md
src/userverse_python_client/: __init__.py  arithmetic.py  client_error.py  error_model.py  http_client_base.py  user.py
src/userverse_python_client/clients/: company.py  company_user_management.py  company_user_roles_management.py  user.py
src/userverse_python_client/models/: enums.py  exceptions.py  user.py
tests/: test_arithmetic.py  test_client_error.py  test_company_user_management_client.py  test_http_client_base.py  test_user_client.py
