[project]
name = "userverse-python-client"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "skhendle@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.119.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
